# qa_guru_additional_hw_1_Selemium_Webdriver

./: pyproject.toml
seleyasha/: browser.py  commands.py  conditions.py  general.py  managing.py  selector.py  wait.py
seleyasha/conditions/: that.py
seleyasha/models/: web_pages_manager.py
seleyasha/models/pages/: ecosia.py  github.py
tests/: test_google.py
